--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "^12.8.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-icalendar-link": "^3.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
