--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^17.0.2",
     "react-icalendar-link": "^3.0.2",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.21",
+    "tippy.js": "^6.3.7",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
